// Auth System
Table auth.users as U {
  id uuid [pk, default: `uuid_generate_v4()`]
  email varchar(255) [not null, unique]
  password varchar(255) [not null]
  phone varchar(25) [not null, unique]
  name text
  created_at timestamp [not null, default: `now()`]
}

Table auth.admins {
  user_id uuid [not null, ref: > U.id]
}

Table auth.managers {
  user_id uuid [not null, ref: > U.id]
  created_at timestamp [not null, default: `now()`]
}

Table auth.members {
  user_id uuid [not null, ref: > U.id]
  level int [not null, default: 1]
  address varchar(255) [not null]
  is_active boolean [not null, default: true]
  joined_at timestamp [not null, default: `now()`]
}

Table auth.block_records {
  id int [pk, increment]
  created_by uuid [not null, ref: > auth.admins.user_id]
  user_id uuid [not null, ref: > U.id]
  reason text
  created_at timestamp [not null, default: `now()`]
}

Table auth.system_announcements {
  id int [pk, increment]
  created_by uuid [not null, ref: > auth.admins.user_id]
  message text
  created_at timestamp [not null, default: `now()`]
}

// Store System
Table store.vendors {
  id int [pk, increment]
  manager_id uuid [not null, ref: > auth.managers.user_id]
  name text [not null]
  status varchar [not null]
  revenue int [not null, default: 0, note: '營業額']
  address varchar(255) [not null, unique]
  created_at timestamp [not null, default: `now()`]
}

Table store.products {
  id int [pk, increment]
  vendor_id int [not null, ref: > store.vendors.id]
  name varchar(50) [not null]
  price int [not null]
  description text
  url text
}

Table store.reviews {
  id int [pk, increment]
  created_by uuid [not null, ref: > U.id]
  vendor_id int [not null, ref: > store.vendors.id]
  rating int [not null]
  content text
  created_at timestamp [not null, default: `now()`]
}

// Order System
Enum order.coupon_type {
  percent
  fixed
}

Table order.coupons {
  code varchar(10) [pk, unique]
  type order.coupon_type [not null]
  value int [not null]
  min_purchase int [default: 0]
  max_discount int
  created_at timestamp [not null, default: `now()`]
}

Enum order.payment_methods {
  cash      // 現金
  credit    // 刷卡
}

Enum order.order_status {
  pending      // 等待中
  processing   // 處理中
  shipping     // 配送中
  delivered    // 已送達
}

Enum order.refund_status {
  refunded     // 已退款
  rejected     // 退款被拒
}

Table order.orders {
  id uuid [pk, default: `uuid_generate_v4()`]
  user_id uuid [not null, ref: > U.id]
  vendor_id int [not null, ref: > store.vendors.id]
  coupon_code varchar(10) [ref: > order.coupons.code]
  total int [not null]
  payment_methods order.payment_methods [not null, note: '付款方式']
  order_status order.order_status [not null, default: 'pending', note: '訂單狀態']
  refund_status order.refund_status [note: '未退款為 NULL']
  refund_at timestamp [note: '未退款為 NULL']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`, note: 'TODO: Add ON UPDATE ON UPDATE CURRENT_TIMESTAMP']
}

Table order.order_items {
  order_id int [not null, ref: > order.orders.id]
  product_id int [not null, ref: > store.products.id]
  quantity int [not null]

  Indexes {
    (order_id, product_id) [pk]
  }
}

Table order.carts {
  id uuid [pk, default: `uuid_generate_v4()`]
  user_id uuid [not null, ref: > U.id]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`, note: 'TODO: Add ON UPDATE ON UPDATE CURRENT_TIMESTAMP']
}

Table order.cart_items {
  cart_id uuid [not null, ref: > order.carts.id]
  product_id int [not null, ref: > store.products.id]
  quantity int [not null, default: 1]

  Indexes {
    (cart_id, product_id) [pk]
  }
}